--- a/development.yml
+++ b/development.yml
@@ -1,13 +1,21 @@
 host: 0.0.0.0
 port: 1025
 log_level: info
+version: 1.0.0
 
-redis:
-  host: 127.0.0.1
-  port: 6379
-  password: ""
+account_service:
+  host: 0.0.0.0
+  port: 10002
 
-tow_factor:
-  hotp_counter: 0
-  window_size: 1
-  utc: true
+captcha_service:
+  host: 0.0.0.0
+  port: 10003
+
+message_service:
+  host: 0.0.0.0
+  port: 10004
+
+storage_service:
+  host: 0.0.0.0
+  port: 10005
+
