--- a/development.yml
+++ b/development.yml
@@ -12,10 +12,13 @@ captcha_service:
   port: 10003
 
 message_service:
-  host: 0.0.0.0
+  host: 47.75.183.114
   port: 10004
 
 storage_service:
   host: 0.0.0.0
   port: 10005
 
+bisale_user_service:
+  host: 47.75.183.114
+  port: 10011
