--- a/development.yml
+++ b/development.yml
@@ -4,27 +4,33 @@ log_level: info
 version: 1.0.0
 
 bisale_business_service:
-  host: 47.75.183.114
+  #host: 47.75.183.114
+  host: 18.182.55.110
   port: 10001
 
 account_service:
-  host: 47.75.183.114
+  #host: 47.75.183.114
+  host: 18.182.55.110
   port: 10002
 
 captcha_service:
-  host: 47.75.183.114
+  #host: 47.75.183.114
+  host: 18.182.55.110
   port: 10003
 
 message_service:
-  host: 47.75.183.114
+  #host: 47.75.183.114
+  host: 18.182.55.110
   port: 10004
 
 storage_service:
-  host: 47.75.183.114
+  #host: 47.75.183.114
+  host: 18.182.55.110
   port: 10005
 
 bisale_user_service:
-  host: 47.75.183.114
+  #host: 47.75.183.114
+  host: 18.182.55.110
   port: 10011
 
 
