--- a/development.yml
+++ b/development.yml
@@ -2,7 +2,8 @@ host: 0.0.0.0
 port: 1025
 log_level: info
 version: 1.0.0
-banner_bucket: bisale-test-low
+banner_bucket: bisale-test-public
+banner_expired: 86400
 banner_size: 5242880
 
 redis:
