--- a/development.yml
+++ b/development.yml
@@ -47,7 +47,8 @@ wallet_service:
   port: 8002
 
 oms_service:
-  host: 0.0.0.0
+#  host: 0.0.0.0
+  host: 192.168.31.128
 #  host: 192.168.31.117
 #  host: 192.168.31.105
 #  host: 47.75.183.114
