--- a/development.yml
+++ b/development.yml
@@ -48,7 +48,8 @@ wallet_service:
 
 oms_service:
 #  host: 0.0.0.0
-  host: 192.168.31.128
+  host: 192.168.31.94
+#  host: 192.168.31.128
 #  host: 192.168.31.117
 #  host: 192.168.31.105
 #  host: 47.75.183.114
