--- a/development.yml
+++ b/development.yml
@@ -52,7 +52,7 @@ oms_service:
 # jun feng
 #  host: 192.168.31.117
 # yang peng
-#  host: 192.168.31.128
+  host: 192.168.31.128
 #  host: 192.168.31.128
 #  host: 192.168.31.117
 #  host: 192.168.31.105
